# Rust-API

./: Cargo.toml  Dockerfile  azure-pipelines-live.yml  azure-pipelines-play.yml
src/: fault.rs  main.rs  util.rs
src/api/: change_password.rs  cron.rs  episode_get.rs  episode_image_put.rs  episode_metadata_post.rs  episode_metadata_put.rs  episode_post.rs  episode_recording_put.rs  forgot_password.rs  get_all_offices.rs  mod.rs  new_users_email.rs  office_poll.rs  refresh_token.rs  series_image_put.rs  series_user_data_post.rs  signin.rs  signup.rs  subscription_get.rs  subscription_post.rs  user_delete.rs  user_device_post.rs  user_get.rs  user_image_put.rs  user_poll.rs  user_put.rs  user_roles_put.rs  webhook_subscription_apple.rs
src/filters/: handle_rejection.rs  mod.rs  with_optional_token.rs  with_range.rs  with_since.rs  with_token.rs  with_version.rs
src/in_app_purchases/: Cargo.toml
src/in_app_purchases/src/: apple_api_error_code.rs  apple_receipt.rs  apple_receipt_status.rs  apple_receipt_type.rs  apple_subscription_status.rs  claims.rs  environment.rs  error.rs  get_apple_subscription_status.rs  get_google_product.rs  get_google_subscription.rs  get_purchase.rs  google_product_purchase.rs  google_subscription_purchase.rs  lib.rs  platform.rs  product_type.rs  purchase.rs  util.rs  verify_apple_receipt.rs
src/models/: auth_email.rs  category.rs  claims.rs  device.rs  episode.rs  episode_metadata.rs  i18n_string.rs  mod.rs  office.rs  recommendation.rs  role.rs  role_flags.rs  series.rs  series_user_data.rs  subscription.rs  user.rs
src/platform_signin/: Cargo.toml
src/push/: account.rs  error.rs  get_signature.rs  mod.rs  pns.rs  register_device_success.rs  send.rs  send_custom_pn.rs  silent_push.rs
(+1 files in other folders)
