[package]
name = "in_app_purchases"
version = "0.1.0"
authors = ["Alexander Yngling <yngling@thirdact.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "native-tls"] }
base64 = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
rust_decimal = "1.8.1"
chrono = { version = "0.4.19", features = ["serde"] }
md5 = "0.7.0"
jsonwebtoken = "^7"
uuid = { version = "0.8", features = ["v4"] }
